--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -2,3 +2,5 @@
 main:
   - title: "About me"
     url: /about_me/
+  - title: "Resume"
+    url: https://raw.githubusercontent.com/laehon/portfolio/master/assets/Resume.pdf
