fixed resume added first proj

--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -3,4 +3,4 @@ main:
   - title: "About me"
     url: /about_me/
   - title: "Resume"
-    url: https://raw.githubusercontent.com/laehon/portfolio/master/assets/Resume.pdf
+    url: https://raw.githubusercontent.com/laehon/laehon.github.io/master/assets/Resume.pdf
